--- a/src/App.css
+++ b/src/App.css
@@ -24,12 +24,11 @@ body{
     min-height: 100vh;
     font-family: "Outfit", sans-serif;
 }
-.li--padding{
-    padding: 5px;
-}
+
 /* h1, h2, h3, h4, h5, h6{
     text-wrap: balance;
 } */
+/*  */
 p{
     text-wrap: pretty;
 }
